@@ -13,6 +13,7 @@
 * chat styles: #2565 fixed: no css style in chat window with one message after updating settings (marseel)
 * history: #2550 fixed: ask user for removing history (marseel)
 * gui: #953 done: use directory selection dialog in screenshot plugin (mazlik)
+* screenshot: #2558 fixed: activate and focus screenshot window properly, handle Esc and Return keys (ultr)
 
 +++ version 0.12.0-beta1
 * tabs: "Close all tabs but active one" action added (Juzef)
